CI: Исправлен yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,16 @@ jobs:
       - name: Клонирование репозитория
         uses: actions/checkout@v4
 
-      - name: Установка зависимостей
+      - name: Установка promtool и yamllint
         run: |
           sudo apt-get update
-          sudo apt-get install -y prometheus alertmanager yamllint
+          sudo apt-get install -y prometheus yamllint
+
+      - name: Установка amtool (Alertmanager CLI)
+        run: |
+          wget https://github.com/prometheus/alertmanager/releases/download/v0.26.0/alertmanager-0.26.0.linux-amd64.tar.gz
+          tar -xzf alertmanager-0.26.0.linux-amd64.tar.gz
+          sudo mv alertmanager-0.26.0.linux-amd64/amtool /usr/local/bin/amtool
 
       - name: Проверка YAML-файлов
         run: yamllint .
@@ -29,4 +35,9 @@ jobs:
         run: promtool check rules prometheus/alert.rules.yml
 
       - name: Проверка конфигурации Alertmanager
-        run: amtool check-config alertmanager/alertmanager.yml || echo "Файл может быть приватным"
+        run: |
+          if [ -f alertmanager/alertmanager.yml ]; then
+            amtool check-config alertmanager/alertmanager.yml
+          else
+            echo "alertmanager.yml отсутствует, пропускаем"
+          fi
