--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,12 @@ jobs:
           else
             echo "alertmanager.yml отсутствует, пропускаем"
           fi
+
+      - name: Логин в DockerHub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Сборка Docker-образа
+        run: docker build -t alexanderson225/homelab-monitoring:latest .
+
+      - name: Публикация Docker-образа
+        run: docker push alexanderson225/homelab-monitoring:latest
