--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -12,7 +12,26 @@ scrape_configs:
 
   - job_name: 'node'
     static_configs:
-      - targets: ['node-exporter:9100', '192.168.31.98:9100']
+      - targets: ['node-exporter:9100', '192.168.31.98:9100', '192.168.31.109:9100']
+
+  - job_name: 'blackbox-http'
+    metrics_path: /probe
+    params:
+      module: [http_2xx]
+
+    static_configs:
+      - targets:
+          - https://mfchimki.ru
+          - http://192.168.31.1
+          - http://grafana:3000
+
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: blackbox-exporter:9115
 
 alerting:
   alertmanagers:
